# clipstash

./: .gitignore  AGENTS.md  README.md  TASK_STATE.md  clipboard_utils.py  config.py  db.py  main.py  requirements.txt  start-latest.bat
.github/workflows/: build.yml
clipstash-next/: package-lock.json  package.json
clipstash-next/design-reference/: README.md
clipstash-next/migration-notes/: android-widget-design.md  functional-todolist.md  phase-2-3-ui-acceptance.md  phase-2-write-safety.md  phase-3-import-executor.md  phase-4-migration-plan.md  regression-dataset.md  release-checklist.md
clipstash-next/public/: image-preview.html
clipstash-next/src/: App.css  App.tsx
clipstash-next/src-tauri/: Cargo.toml  tauri.conf.json
clipstash-next/src-tauri/capabilities/: default.json
clipstash-next/src-tauri/icons/: icon.icns
clipstash-next/src-tauri/src/: app_data.rs  app_settings.rs  data_transfer.rs  import_executor.rs  keyboard_input.rs  legacy_backup.rs  legacy_clipboard.rs  legacy_data.rs  legacy_image_files.rs  legacy_model.rs  legacy_paths.rs  legacy_query.rs  legacy_read_tests.rs  legacy_safety.rs  legacy_schema.rs  legacy_test_support.rs  legacy_write_audit.rs  legacy_write_exec.rs  legacy_write_ops.rs  legacy_write_precheck.rs  legacy_write_validation.rs  lib.rs  main.rs  window_targets.rs
clipstash-next/src/api/: legacy.ts  types.ts
clipstash-next/test-data/regression/legacy/: clipstash.db
clipstash-next/tests/: App.android.test.tsx  App.edit-delete.test.tsx  App.media-create.test.tsx  App.safety.test.tsx  legacy-api.test.ts
setup/: ClipStash.iss  build.ps1
tools/: generate_icon.py
